Allow create function to create more than 1 user with an optional args.limit Bump version to 0.0.2

--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "fb-test-users",
   "description": "A utility to create, read, update, and delete Facebook test users for your Facebook application",
   "main": "./lib/fb-test-users",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "author": "Pat DeSantis <pdesantis3@gmail.com>",
   "dependencies": {
+    "async": "0.2.9",
     "request": "2.21.0"
   },
   "devDependencies": {
